groff-1.11/pic/y.output
   0  $accept : top $end

   1  top : optional_separator
   2      | element_list

   3  element_list : optional_separator middle_element_list optional_separator

   4  middle_element_list : element
   5                      | middle_element_list separator element

   6  optional_separator :
   7                     | separator

   8  separator : ';'
   9            | separator ';'

  10  placeless_element : VARIABLE '=' any_expr
  11                    | VARIABLE ':' '=' any_expr
  12                    | UP
  13                    | DOWN
  14                    | LEFT
  15                    | RIGHT
  16                    | COMMAND_LINE
  17                    | COMMAND print_args
  18                    | PRINT print_args

  19  $$1 :

  20  placeless_element : SH $$1 DELIMITED
  21                    | COPY TEXT

  22  $$2 :

  23  $$3 :

  24  placeless_element : COPY TEXT THRU $$2 DELIMITED $$3 until

  25  $$4 :

  26  $$5 :

  27  placeless_element : COPY THRU $$4 DELIMITED $$5 until

  28  $$6 :

  29  placeless_element : FOR VARIABLE '=' expr TO expr optional_by DO $$6 DELIMITED
  30                    | simple_if

  31  $$7 :

  32  placeless_element : simple_if ELSE $$7 DELIMITED
  33                    | reset_variables
  34                    | RESET

  35  reset_variables : RESET VARIABLE
  36                  | reset_variables VARIABLE
  37                  | reset_variables ',' VARIABLE

  38  print_args : print_arg
  39             | print_args print_arg

  40  print_arg : expr
  41            | text
  42            | position

  43  $$8 :

  44  simple_if : IF any_expr THEN $$8 DELIMITED

  45  until :
  46        | UNTIL TEXT

  47  any_expr : expr
  48           | text_expr

  49  text_expr : text EQUALEQUAL text
  50            | text NOTEQUAL text
  51            | text_expr ANDAND text_expr
  52            | text_expr ANDAND expr
  53            | expr ANDAND text_expr
  54            | text_expr OROR text_expr
  55            | text_expr OROR expr
  56            | expr OROR text_expr
  57            | '!' text_expr

  58  optional_by :
  59              | BY expr
  60              | BY '*' expr

  61  element : object_spec
  62          | LABEL ':' optional_separator element
  63          | LABEL ':' optional_separator position_not_place
  64          | LABEL ':' optional_separator place

  65  $$9 :

  66  $$10 :

  67  element : '{' $$9 element_list '}' $$10 optional_element
  68          | placeless_element

  69  optional_element :
  70                   | element

  71  object_spec : BOX
  72              | CIRCLE
  73              | ELLIPSE
  74              | ARC
  75              | LINE
  76              | ARROW
  77              | MOVE
  78              | SPLINE
  79              | text
  80              | PLOT expr
  81              | PLOT expr text

  82  $$11 :

  83  object_spec : '[' $$11 element_list ']'
  84              | object_spec HEIGHT expr
  85              | object_spec RADIUS expr
  86              | object_spec WIDTH expr
  87              | object_spec DIAMETER expr
  88              | object_spec expr
  89              | object_spec UP
  90              | object_spec UP expr
  91              | object_spec DOWN
  92              | object_spec DOWN expr
  93              | object_spec RIGHT
  94              | object_spec RIGHT expr
  95              | object_spec LEFT
  96              | object_spec LEFT expr
  97              | object_spec FROM position
  98              | object_spec TO position
  99              | object_spec AT position
 100              | object_spec WITH path
 101              | object_spec BY expr_pair
 102              | object_spec THEN
 103              | object_spec DOTTED
 104              | object_spec DOTTED expr
 105              | object_spec DASHED
 106              | object_spec DASHED expr
 107              | object_spec FILL
 108              | object_spec FILL expr
 109              | object_spec CHOP
 110              | object_spec CHOP expr
 111              | object_spec SAME
 112              | object_spec INVISIBLE
 113              | object_spec LEFT_ARROW_HEAD
 114              | object_spec RIGHT_ARROW_HEAD
 115              | object_spec DOUBLE_ARROW_HEAD
 116              | object_spec CW
 117              | object_spec CCW
 118              | object_spec text
 119              | object_spec LJUST
 120              | object_spec RJUST
 121              | object_spec ABOVE
 122              | object_spec BELOW
 123              | object_spec THICKNESS expr
 124              | object_spec ALIGNED

 125  text : TEXT
 126       | SPRINTF '(' TEXT sprintf_args ')'

 127  sprintf_args :
 128               | sprintf_args ',' expr

 129  position : position_not_place
 130           | place

 131  position_not_place : expr_pair
 132                     | position '+' expr_pair
 133                     | position '-' expr_pair
 134                     | '(' position ',' position ')'
 135                     | expr between position AND position
 136                     | expr '<' position ',' position '>'

 137  between : BETWEEN
 138          | OF THE WAY BETWEEN

 139  expr_pair : expr ',' expr
 140            | '(' expr_pair ')'

 141  place : label
 142        | label corner
 143        | corner label
 144        | corner OF label
 145        | HERE

 146  label : LABEL
 147        | nth_primitive
 148        | label '.' LABEL

 149  ordinal : ORDINAL
 150          | '`' any_expr TH

 151  optional_ordinal_last : LAST
 152                        | ordinal LAST

 153  nth_primitive : ordinal object_type
 154                | optional_ordinal_last object_type

 155  object_type : BOX
 156              | CIRCLE
 157              | ELLIPSE
 158              | ARC
 159              | LINE
 160              | ARROW
 161              | SPLINE
 162              | '[' ']'
 163              | TEXT

 164  label_path : '.' LABEL
 165             | label_path '.' LABEL

 166  relative_path : corner
 167                | label_path
 168                | label_path corner

 169  path : relative_path
 170       | '(' relative_path ',' relative_path ')'
 171       | ORDINAL LAST object_type relative_path
 172       | LAST object_type relative_path
 173       | ORDINAL object_type relative_path
 174       | LABEL relative_path

 175  corner : DOT_N
 176         | DOT_E
 177         | DOT_W
 178         | DOT_S
 179         | DOT_NE
 180         | DOT_SE
 181         | DOT_NW
 182         | DOT_SW
 183         | DOT_C
 184         | DOT_START
 185         | DOT_END
 186         | TOP
 187         | BOTTOM
 188         | LEFT
 189         | RIGHT
 190         | UPPER LEFT
 191         | LOWER LEFT
 192         | UPPER RIGHT
 193         | LOWER RIGHT
 194         | LEFT_CORNER
 195         | RIGHT_CORNER
 196         | UPPER LEFT_CORNER
 197         | LOWER LEFT_CORNER
 198         | UPPER RIGHT_CORNER
 199         | LOWER RIGHT_CORNER
 200         | CENTER
 201         | START
 202         | END

 203  expr : VARIABLE
 204       | NUMBER
 205       | place DOT_X
 206       | place DOT_Y
 207       | place DOT_HT
 208       | place DOT_WID
 209       | place DOT_RAD
 210       | expr '+' expr
 211       | expr '-' expr
 212       | expr '*' expr
 213       | expr '/' expr
 214       | expr '%' expr
 215       | expr '^' expr
 216       | '-' expr
 217       | '(' any_expr ')'
 218       | SIN '(' any_expr ')'
 219       | COS '(' any_expr ')'
 220       | ATAN2 '(' any_expr ',' any_expr ')'
 221       | LOG '(' any_expr ')'
 222       | EXP '(' any_expr ')'
 223       | SQRT '(' any_expr ')'
 224       | K_MAX '(' any_expr ',' any_expr ')'
 225       | K_MIN '(' any_expr ',' any_expr ')'
 226       | INT '(' any_expr ')'
 227       | RAND '(' any_expr ')'
 228       | RAND '(' ')'
 229       | expr '<' expr
 230       | expr LESSEQUAL expr
 231       | expr '>' expr
 232       | expr GREATEREQUAL expr
 233       | expr EQUALEQUAL expr
 234       | expr NOTEQUAL expr
 235       | expr ANDAND expr
 236       | expr OROR expr
 237       | '!' expr

state 0
	$accept : . top $end  (0)
	optional_separator : .  (6)

	';'  shift 1
	$end  reduce 6
	LABEL  reduce 6
	VARIABLE  reduce 6
	TEXT  reduce 6
	COMMAND_LINE  reduce 6
	UP  reduce 6
	DOWN  reduce 6
	LEFT  reduce 6
	RIGHT  reduce 6
	BOX  reduce 6
	CIRCLE  reduce 6
	ELLIPSE  reduce 6
	ARC  reduce 6
	LINE  reduce 6
	ARROW  reduce 6
	MOVE  reduce 6
	SPLINE  reduce 6
	COPY  reduce 6
	SH  reduce 6
	PRINT  reduce 6
	FOR  reduce 6
	IF  reduce 6
	RESET  reduce 6
	PLOT  reduce 6
	SPRINTF  reduce 6
	COMMAND  reduce 6
	'{'  reduce 6
	'['  reduce 6

	top  goto 2
	element_list  goto 3
	optional_separator  goto 4
	separator  goto 5


state 1
	separator : ';' .  (8)

	.  reduce 8


state 2
	$accept : top . $end  (0)

	$end  accept


state 3
	top : element_list .  (2)

	.  reduce 2


state 4
	top : optional_separator .  (1)
	element_list : optional_separator . middle_element_list optional_separator  (3)

	LABEL  shift 6
	VARIABLE  shift 7
	TEXT  shift 8
	COMMAND_LINE  shift 9
	UP  shift 10
	DOWN  shift 11
	LEFT  shift 12
	RIGHT  shift 13
	BOX  shift 14
	CIRCLE  shift 15
	ELLIPSE  shift 16
	ARC  shift 17
	LINE  shift 18
	ARROW  shift 19
	MOVE  shift 20
	SPLINE  shift 21
	COPY  shift 22
	SH  shift 23
	PRINT  shift 24
	FOR  shift 25
	IF  shift 26
	RESET  shift 27
	PLOT  shift 28
	SPRINTF  shift 29
	COMMAND  shift 30
	'{'  shift 31
	'['  shift 32
	$end  reduce 1

	simple_if  goto 33
	element  goto 34
	middle_element_list  goto 35
	object_spec  goto 36
	text  goto 37
	placeless_element  goto 38
	reset_variables  goto 39


state 5
	optional_separator : separator .  (7)
	separator : separator . ';'  (9)

	';'  shift 40
	$end  reduce 7
	LABEL  reduce 7
	VARIABLE  reduce 7
	NUMBER  reduce 7
	TEXT  reduce 7
	COMMAND_LINE  reduce 7
	ORDINAL  reduce 7
	LAST  reduce 7
	UP  reduce 7
	DOWN  reduce 7
	LEFT  reduce 7
	RIGHT  reduce 7
	BOX  reduce 7
	CIRCLE  reduce 7
	ELLIPSE  reduce 7
	ARC  reduce 7
	LINE  reduce 7
	ARROW  reduce 7
	MOVE  reduce 7
	SPLINE  reduce 7
	HERE  reduce 7
	DOT_N  reduce 7
	DOT_E  reduce 7
	DOT_W  reduce 7
	DOT_S  reduce 7
	DOT_NE  reduce 7
	DOT_SE  reduce 7
	DOT_NW  reduce 7
	DOT_SW  reduce 7
	DOT_C  reduce 7
	DOT_START  reduce 7
	DOT_END  reduce 7
	SIN  reduce 7
	COS  reduce 7
	ATAN2  reduce 7
	LOG  reduce 7
	EXP  reduce 7
	SQRT  reduce 7
	K_MAX  reduce 7
	K_MIN  reduce 7
	INT  reduce 7
	RAND  reduce 7
	COPY  reduce 7
	TOP  reduce 7
	BOTTOM  reduce 7
	UPPER  reduce 7
	LOWER  reduce 7
	SH  reduce 7
	PRINT  reduce 7
	FOR  reduce 7
	IF  reduce 7
	LEFT_CORNER  reduce 7
	RIGHT_CORNER  reduce 7
	CENTER  reduce 7
	END  reduce 7
	START  reduce 7
	RESET  reduce 7
	PLOT  reduce 7
	SPRINTF  reduce 7
	COMMAND  reduce 7
	'('  reduce 7
	'`'  reduce 7
	'-'  reduce 7
	'!'  reduce 7
	'{'  reduce 7
	'['  reduce 7


state 6
	element : LABEL . ':' optional_separator element  (62)
	element : LABEL . ':' optional_separator position_not_place  (63)
	element : LABEL . ':' optional_separator place  (64)

	':'  shift 41
	.  error


state 7
	placeless_element : VARIABLE . '=' any_expr  (10)
	placeless_element : VARIABLE . ':' '=' any_expr  (11)

	'='  shift 42
	':'  shift 43
	.  error


state 8
	text : TEXT .  (125)

	.  reduce 125


state 9
	placeless_element : COMMAND_LINE .  (16)

	.  reduce 16


state 10
	placeless_element : UP .  (12)

	.  reduce 12


state 11
	placeless_element : DOWN .  (13)

	.  reduce 13


state 12
	placeless_element : LEFT .  (14)

	.  reduce 14


state 13
	placeless_element : RIGHT .  (15)

	.  reduce 15


state 14
	object_spec : BOX .  (71)

	.  reduce 71


state 15
	object_spec : CIRCLE .  (72)

	.  reduce 72


state 16
	object_spec : ELLIPSE .  (73)

	.  reduce 73


state 17
	object_spec : ARC .  (74)

	.  reduce 74


state 18
	object_spec : LINE .  (75)

	.  reduce 75


state 19
	object_spec : ARROW .  (76)

	.  reduce 76


state 20
	object_spec : MOVE .  (77)

	.  reduce 77


state 21
	object_spec : SPLINE .  (78)

	.  reduce 78


state 22
	placeless_element : COPY . TEXT  (21)
	placeless_element : COPY . TEXT THRU $$2 DELIMITED $$3 until  (24)
	placeless_element : COPY . THRU $$4 DELIMITED $$5 until  (27)

	TEXT  shift 44
	THRU  shift 45
	.  error


state 23
	placeless_element : SH . $$1 DELIMITED  (20)
	$$1 : .  (19)

	.  reduce 19

	$$1  goto 46


state 24
	placeless_element : PRINT . print_args  (18)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	TEXT  shift 8
	ORDINAL  shift 50
	LAST  shift 51
	LEFT  shift 52
	RIGHT  shift 53
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	SPRINTF  shift 29
	'('  shift 85
	'`'  shift 86
	'-'  shift 87
	'!'  shift 88
	.  error

	expr  goto 89
	expr_pair  goto 90
	position_not_place  goto 91
	nth_primitive  goto 92
	corner  goto 93
	place  goto 94
	label  goto 95
	position  goto 96
	optional_ordinal_last  goto 97
	ordinal  goto 98
	text  goto 99
	print_args  goto 100
	print_arg  goto 101


state 25
	placeless_element : FOR . VARIABLE '=' expr TO expr optional_by DO $$6 DELIMITED  (29)

	VARIABLE  shift 102
	.  error


state 26
	simple_if : IF . any_expr THEN $$8 DELIMITED  (44)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	TEXT  shift 8
	ORDINAL  shift 50
	LAST  shift 51
	LEFT  shift 52
	RIGHT  shift 53
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	SPRINTF  shift 29
	'('  shift 103
	'`'  shift 86
	'-'  shift 87
	'!'  shift 104
	.  error

	expr  goto 105
	any_expr  goto 106
	text_expr  goto 107
	nth_primitive  goto 92
	corner  goto 93
	place  goto 108
	label  goto 95
	optional_ordinal_last  goto 97
	ordinal  goto 98
	text  goto 109


state 27
	placeless_element : RESET .  (34)
	reset_variables : RESET . VARIABLE  (35)

	VARIABLE  shift 110
	$end  reduce 34
	';'  reduce 34
	'}'  reduce 34
	']'  reduce 34


state 28
	object_spec : PLOT . expr  (80)
	object_spec : PLOT . expr text  (81)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	ORDINAL  shift 50
	LAST  shift 51
	LEFT  shift 52
	RIGHT  shift 53
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	'('  shift 103
	'`'  shift 86
	'-'  shift 87
	'!'  shift 88
	.  error

	expr  goto 111
	nth_primitive  goto 92
	corner  goto 93
	place  goto 108
	label  goto 95
	optional_ordinal_last  goto 97
	ordinal  goto 98


state 29
	text : SPRINTF . '(' TEXT sprintf_args ')'  (126)

	'('  shift 112
	.  error


state 30
	placeless_element : COMMAND . print_args  (17)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	TEXT  shift 8
	ORDINAL  shift 50
	LAST  shift 51
	LEFT  shift 52
	RIGHT  shift 53
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	SPRINTF  shift 29
	'('  shift 85
	'`'  shift 86
	'-'  shift 87
	'!'  shift 88
	.  error

	expr  goto 89
	expr_pair  goto 90
	position_not_place  goto 91
	nth_primitive  goto 92
	corner  goto 93
	place  goto 94
	label  goto 95
	position  goto 96
	optional_ordinal_last  goto 97
	ordinal  goto 98
	text  goto 99
	print_args  goto 113
	print_arg  goto 101


state 31
	element : '{' . $$9 element_list '}' $$10 optional_element  (67)
	$$9 : .  (65)

	.  reduce 65

	$$9  goto 114


state 32
	object_spec : '[' . $$11 element_list ']'  (83)
	$$11 : .  (82)

	.  reduce 82

	$$11  goto 115


state 33
	placeless_element : simple_if .  (30)
	placeless_element : simple_if . ELSE $$7 DELIMITED  (32)

	ELSE  shift 116
	$end  reduce 30
	';'  reduce 30
	'}'  reduce 30
	']'  reduce 30


state 34
	middle_element_list : element .  (4)

	.  reduce 4


state 35
	element_list : optional_separator middle_element_list . optional_separator  (3)
	middle_element_list : middle_element_list . separator element  (5)
	optional_separator : .  (6)

	';'  shift 1
	$end  reduce 6
	'}'  reduce 6
	']'  reduce 6

	optional_separator  goto 117
	separator  goto 118


state 36
	element : object_spec .  (61)
	object_spec : object_spec . HEIGHT expr  (84)
	object_spec : object_spec . RADIUS expr  (85)
	object_spec : object_spec . WIDTH expr  (86)
	object_spec : object_spec . DIAMETER expr  (87)
	object_spec : object_spec . expr  (88)
	object_spec : object_spec . UP  (89)
	object_spec : object_spec . UP expr  (90)
	object_spec : object_spec . DOWN  (91)
	object_spec : object_spec . DOWN expr  (92)
	object_spec : object_spec . RIGHT  (93)
	object_spec : object_spec . RIGHT expr  (94)
	object_spec : object_spec . LEFT  (95)
	object_spec : object_spec . LEFT expr  (96)
	object_spec : object_spec . FROM position  (97)
	object_spec : object_spec . TO position  (98)
	object_spec : object_spec . AT position  (99)
	object_spec : object_spec . WITH path  (100)
	object_spec : object_spec . BY expr_pair  (101)
	object_spec : object_spec . THEN  (102)
	object_spec : object_spec . DOTTED  (103)
	object_spec : object_spec . DOTTED expr  (104)
	object_spec : object_spec . DASHED  (105)
	object_spec : object_spec . DASHED expr  (106)
	object_spec : object_spec . FILL  (107)
	object_spec : object_spec . FILL expr  (108)
	object_spec : object_spec . CHOP  (109)
	object_spec : object_spec . CHOP expr  (110)
	object_spec : object_spec . SAME  (111)
	object_spec : object_spec . INVISIBLE  (112)
	object_spec : object_spec . LEFT_ARROW_HEAD  (113)
	object_spec : object_spec . RIGHT_ARROW_HEAD  (114)
	object_spec : object_spec . DOUBLE_ARROW_HEAD  (115)
	object_spec : object_spec . CW  (116)
	object_spec : object_spec . CCW  (117)
	object_spec : object_spec . text  (118)
	object_spec : object_spec . LJUST  (119)
	object_spec : object_spec . RJUST  (120)
	object_spec : object_spec . ABOVE  (121)
	object_spec : object_spec . BELOW  (122)
	object_spec : object_spec . THICKNESS expr  (123)
	object_spec : object_spec . ALIGNED  (124)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	TEXT  shift 8
	ORDINAL  shift 50
	LEFT_ARROW_HEAD  shift 119
	RIGHT_ARROW_HEAD  shift 120
	DOUBLE_ARROW_HEAD  shift 121
	LAST  shift 51
	UP  shift 122
	DOWN  shift 123
	LEFT  shift 124
	RIGHT  shift 125
	HEIGHT  shift 126
	RADIUS  shift 127
	WIDTH  shift 128
	DIAMETER  shift 129
	FROM  shift 130
	TO  shift 131
	AT  shift 132
	WITH  shift 133
	BY  shift 134
	THEN  shift 135
	DOTTED  shift 136
	DASHED  shift 137
	CHOP  shift 138
	SAME  shift 139
	INVISIBLE  shift 140
	LJUST  shift 141
	RJUST  shift 142
	ABOVE  shift 143
	BELOW  shift 144
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	CW  shift 145
	CCW  shift 146
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	THICKNESS  shift 147
	FILL  shift 148
	ALIGNED  shift 149
	SPRINTF  shift 29
	'('  shift 103
	'`'  shift 86
	'-'  shift 87
	'!'  shift 88
	$end  reduce 61
	';'  reduce 61
	'}'  reduce 61
	']'  reduce 61

	expr  goto 150
	nth_primitive  goto 92
	corner  goto 93
	place  goto 108
	label  goto 95
	optional_ordinal_last  goto 97
	ordinal  goto 98
	text  goto 151


state 37
	object_spec : text .  (79)

	.  reduce 79


state 38
	element : placeless_element .  (68)

	.  reduce 68


state 39
	placeless_element : reset_variables .  (33)
	reset_variables : reset_variables . VARIABLE  (36)
	reset_variables : reset_variables . ',' VARIABLE  (37)

	VARIABLE  shift 152
	','  shift 153
	$end  reduce 33
	';'  reduce 33
	'}'  reduce 33
	']'  reduce 33


state 40
	separator : separator ';' .  (9)

	.  reduce 9


state 41
	element : LABEL ':' . optional_separator element  (62)
	element : LABEL ':' . optional_separator position_not_place  (63)
	element : LABEL ':' . optional_separator place  (64)
	optional_separator : .  (6)

	';'  shift 1
	LABEL  reduce 6
	VARIABLE  reduce 6
	NUMBER  reduce 6
	TEXT  reduce 6
	COMMAND_LINE  reduce 6
	ORDINAL  reduce 6
	LAST  reduce 6
	UP  reduce 6
	DOWN  reduce 6
	LEFT  reduce 6
	RIGHT  reduce 6
	BOX  reduce 6
	CIRCLE  reduce 6
	ELLIPSE  reduce 6
	ARC  reduce 6
	LINE  reduce 6
	ARROW  reduce 6
	MOVE  reduce 6
	SPLINE  reduce 6
	HERE  reduce 6
	DOT_N  reduce 6
	DOT_E  reduce 6
	DOT_W  reduce 6
	DOT_S  reduce 6
	DOT_NE  reduce 6
	DOT_SE  reduce 6
	DOT_NW  reduce 6
	DOT_SW  reduce 6
	DOT_C  reduce 6
	DOT_START  reduce 6
	DOT_END  reduce 6
	SIN  reduce 6
	COS  reduce 6
	ATAN2  reduce 6
	LOG  reduce 6
	EXP  reduce 6
	SQRT  reduce 6
	K_MAX  reduce 6
	K_MIN  reduce 6
	INT  reduce 6
	RAND  reduce 6
	COPY  reduce 6
	TOP  reduce 6
	BOTTOM  reduce 6
	UPPER  reduce 6
	LOWER  reduce 6
	SH  reduce 6
	PRINT  reduce 6
	FOR  reduce 6
	IF  reduce 6
	LEFT_CORNER  reduce 6
	RIGHT_CORNER  reduce 6
	CENTER  reduce 6
	END  reduce 6
	START  reduce 6
	RESET  reduce 6
	PLOT  reduce 6
	SPRINTF  reduce 6
	COMMAND  reduce 6
	'('  reduce 6
	'`'  reduce 6
	'-'  reduce 6
	'!'  reduce 6
	'{'  reduce 6
	'['  reduce 6

	optional_separator  goto 154
	separator  goto 5


state 42
	placeless_element : VARIABLE '=' . any_expr  (10)

	LABEL  shift 47
	VARIABLE  shift 48
	NUMBER  shift 49
	TEXT  shift 8
	ORDINAL  shift 50
	LAST  shift 51
	LEFT  shift 52
	RIGHT  shift 53
	HERE  shift 54
	DOT_N  shift 55
	DOT_E  shift 56
	DOT_W  shift 57
	DOT_S  shift 58
	DOT_NE  shift 59
	DOT_SE  shift 60
	DOT_NW  shift 61
	DOT_SW  shift 62
	DOT_C  shift 63
	DOT_START  shift 64
	DOT_END  shift 65
	SIN  shift 66
	COS  shift 67
	ATAN2  shift 68
	LOG  shift 69
	EXP  shift 70
	SQRT  shift 71
	K_MAX  shift 72
	K_MIN  shift 73
	INT  shift 74
	RAND  shift 75
	TOP  shift 76
	BOTTOM  shift 77
	UPPER  shift 78
	LOWER  shift 79
	LEFT_CORNER  shift 80
	RIGHT_CORNER  shift 81
	CENTER  shift 82
	END  shift 83
	START  shift 84
	SPRINTF  shift 29
	'('  shift 103
	'`'  shift 86
	'-'  shift 87
	'!'  shift 104
	.  error

	expr  goto 105
	any_expr  goto 155
	text_expr  goto 107
	nth_primitive  goto 92
	corner  goto 93
	place  goto 108
	label  goto 95
	optional_ordinal_last  goto 97
	ordinal  goto 98
	text  goto 109


state 43
	placeless_element : VARIABLE ':' . '=' any_expr  (11)

	'='  shift 156
	.  error


state 44
	placeless_element : COPY TEXT .  (21)
	placeless_element : COPY TEXT . THRU $$2 DELIMITED $$3 until  (24)

	THRU  shift 157
	$end  reduce 21
	';'  reduce 21
	'}'  reduce 21
	']'  reduce 21


state 45
	placeless_element : COPY THRU . $$4 DELIMITED $$5 until  (27)
	$$4 : .  (25)

	.  reduce 25

	$$4  goto 158


state 46
	placeless_element : SH $$1 . DELIMITED  (20)

	DELIMITED  shift 159
	.  error


state 47
	label : LABEL .  (146)

	.  reduce 146


state 48
	expr : VARIABLE .  (203)

	.  reduce 203


state 49
	expr : NUMBER .  (204)

	.  reduce 204


state 50
	ordinal : ORDINAL .  (149)

	.  reduce 149


state 51
	optional_ordinal_last : LAST .  (151)

	.  reduce 151


state 52
	corner : LEFT .  (188)

	.  reduce 188


state 53
	corner : RIGHT .  (189)

	.  reduce 189


state 54
	place : HERE .  (145)

	.  reduce 145


state 55
	corner : DOT_N .  (175)

	.  reduce 175


state 56
	corner : DOT_E .  (176)

	.  reduce 176


state 57
	corner : DOT_W .  (177)

	.  reduce 177


state 58
	corner : DOT_S .  (178)

	.  reduce 178


state 59
	corner : DOT_NE .  (179)

	.  reduce 179


state 60
	corner : DOT_SE .  (180)

	.  reduce 180


state 61
	corner : DOT_NW .  (181)

	.  reduce 181


state 62
	corner : DOT_SW .  (182)

	.  reduce 182


state 63
	corner : DOT_C .  (183)

	.  reduce 183


state 64
	corner : DOT_START .  (184)

	.  reduce 184


state 65
	corner : DOT_END .  (185)

	.  reduce 185


state 66
	expr : SIN . '(' any_expr ')'  (218)

	'('  shift 160
	.  error


state 67
	expr : COS . '(' any_expr ')'  (219)

	'('  shift 161
	.  error


state 68
	expr : ATAN2 . '(' any_expr ',' any_expr ')'  (220)

	'('  shift 162
	.  error


state 69
	expr : LOG . '(' any_expr ')'  (221)

	'('  shift 163
	.  error


state 70
	expr : EXP . '(' any_expr ')'  (222)

	'('  shift 164
	.  error


state 71
	expr : SQRT . '(' any_expr ')'  (223)

	'('  shift 165
	.  error

